1) Добавил в API спецификацию описание двух дополнительных методов: /pullRequest/incomplete /pullRequest/assignReviewers 2) Создал отдельные файлы для реализации этих обработчиков
